[gd_scene load_steps=2 format=3 uid="uid://bje1x41oldwpw"]

[ext_resource type="Script" path="res://Scenes/Debug Interface/debug_interface.gd" id="1_jmlrq"]

[node name="debug_interface_window" type="Window"]
disable_3d = true
title = "Debug Interface"
position = Vector2i(0, 36)
size = Vector2i(300, 300)
visible = false

[node name="debug_interface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jmlrq")

[node name="scroll" type="VBoxContainer" parent="debug_interface"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="nanites_scroll" type="HBoxContainer" parent="debug_interface/scroll"]
layout_mode = 2

[node name="nanites_label" type="Label" parent="debug_interface/scroll/nanites_scroll"]
layout_mode = 2
size_flags_horizontal = 2
text = "+100000n"
horizontal_alignment = 1
vertical_alignment = 1

[node name="nanites_slider" type="HSlider" parent="debug_interface/scroll/nanites_scroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 2.0
max_value = 100000.0
step = 10000.0
rounded = true

[node name="nanites_button" type="Button" parent="debug_interface/scroll/nanites_scroll"]
layout_mode = 2
size_flags_horizontal = 10
text = "ADD"

[node name="clear_load_rules_button" type="Button" parent="debug_interface/scroll"]
layout_mode = 2
text = "CLEAR AND LOAD RULES"

[node name="reveal_wormholes_button" type="Button" parent="debug_interface/scroll"]
layout_mode = 2
text = "REVEAL ALL WORMHOLES"

[node name="reveal_bodies_button" type="Button" parent="debug_interface/scroll"]
layout_mode = 2
text = "REVEAL ALL BODIES"

[node name="print_test_button" type="Button" parent="debug_interface/scroll"]
layout_mode = 2
text = "PRINT TEST"

[connection signal="close_requested" from="." to="debug_interface" method="_on_debug_interface_window_close_requested"]
[connection signal="drag_ended" from="debug_interface/scroll/nanites_scroll/nanites_slider" to="debug_interface" method="_on_nanites_slider_drag_ended"]
[connection signal="pressed" from="debug_interface/scroll/nanites_scroll/nanites_button" to="debug_interface" method="_on_nanites_button_pressed"]
[connection signal="pressed" from="debug_interface/scroll/clear_load_rules_button" to="debug_interface" method="_on_clear_load_rules_button_pressed"]
[connection signal="pressed" from="debug_interface/scroll/reveal_wormholes_button" to="debug_interface" method="_on_reveal_wormholes_button_pressed"]
[connection signal="pressed" from="debug_interface/scroll/reveal_bodies_button" to="debug_interface" method="_on_reveal_bodies_button_pressed"]
[connection signal="pressed" from="debug_interface/scroll/print_test_button" to="debug_interface" method="_on_print_test_button_pressed"]
